[package]
name = "json-filter"
version = "0.1.0"
edition = "2021"
description = "A library for filtering JSON values using simple query structs / enums"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Sliman4/json-filter"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
